# rtpsendreceive

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  License.md  ReadMe.md  appveyor.yml  build_ffmpeg_macos.sh  build_ffmpeg_win.sh  copy_externals.sh  package-info.json.in  rtpsendreceive.code-workspace  setup_dev_env.sh
.github/workflows/: build_and_test.yml  release.yml
cmake/: FindFFmpeg.cmake
docs/: mc.rtpreceive~.maxref.xml  mc.rtpsend~.maxref.xml  rtpsendreceive.mc.rtpsend~.maxref.xml
help/: mc.rtpsend~.maxhelp  rtphelpstarter.js  rtpsendreceive.hello-world.maxhelp
source/projects/mc.rtpreceive_tilde/: CMakeLists.txt  mc.rtpreceive_tilde.cpp  mc.rtpreceive_tilde_test.cmake  mc.rtpreceive_tilde_test.cpp
source/projects/mc.rtpsend_tilde/: CMakeLists.txt  mc.rtpsend_tilde.cpp  mc.rtpsend_tilde_test.cmake  mc.rtpsend_tilde_test.cpp
source/projects/rtpsendreceive.mc.rtpreceive_tilde/: rtpsendreceive.mc.rtpreceive_tilde_test.cpp
source/projects/rtpsendreceive.mc.rtpsend_tilde/: CMakeLists.txt  rtpsendreceive.mc.rtpsend_tilde.cpp  rtpsendreceive.mc.rtpsend_tilde_test.cmake  rtpsendreceive.mc.rtpsend_tilde_test.cpp  test_patch
source/rtpsendreceive_lib/: CMakeLists.txt  lockfree_ringbuffer.hpp  lockfree_ringbuffer_test.hpp  min_debugutils.hpp  rtpreceiver.cpp  rtpreceiver.hpp  rtpsender.cpp  rtpsender.hpp  rtpsendreceive_lib.cpp  rtpsendreceive_lib.hpp  rtpsendreceive_lib_test.cmake  rtpsendreceive_lib_test.cpp  rtpsr_classes.cpp  rtpsr_classes.hpp  rtpsr_classes_test.cpp  rtpsrbase.cpp  rtpsrbase.hpp
test_patch/: receiver_test.maxpat  self_loop_test.maxpat  sender_test.maxpat
vcpkg-helper/: x64-osx-rel.cmake
